@@ -292,7 +292,6 @@
 					t.menu.hideMenu();
 				}
 			}
-			t.focus();
 		},
 
 		/**
@@ -310,7 +309,10 @@
 				max_height : 150
 			});
 
-			m.onHideMenu.add(t.hideMenu, t);
+			m.onHideMenu.add(function() {
+				t.hideMenu();
+				t.focus();
+			});
 
 			m.add({
 				title : t.settings.title,
